# Rest-api

./: CMakeLists.txt  Dockerfile  README.md  Readme.md  start.sh  start_consumer.sh
docker/: docker-compose.yml
docker/mysql/: Dockerfile  init.sql  sql_some.sql
docker/proxysql/: Dockerfile  proxysql.cnf
src/: main.cpp
src/Database/: person.cpp  person.h
src/Database/Person/: person.cpp  person.h
src/Database/cache/: cache.cpp  cache.h
src/Server/: web_server.cpp  web_server.h
src/Some_handlers/: MyHendlers.cpp  MyHendlers.h
src/config/: config.h
src/debug/: debug.h
src/kafka/: consumer_main.cpp  kafka_q.cpp  kafka_q.h
